Fixes history card overflow.

--- a/src/Components/History.css
+++ b/src/Components/History.css
@@ -5,7 +5,7 @@
 		"back heading"
 		"scores scores";
 	justify-items: center;
-	/* align-items: center; */
+	overflow: hidden;
 	position: absolute;
 	left: 50%;
 	top: 50%;
